<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">UW Food Menu</string>
    <string name="defaultdata">Default</string>
    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="mainScreenText" translatable="false">What would you like to view?</string>
    <string name="mainscreen" translatable="false">Images for the main screen!</string>
    <string name="title_activity_restaurant_menu_list" translatable="false">RestaurantMenuList</string>
    <string name="menuText" translatable="false">Menu</string>
    <string name="locationText" translatable="false">Location &amp; Hours</string>
    <string name="title_activity_location_hours">Locations</string>
    <string name="action_settings">Settings</string>
    <string name="action_settings">Example Settings</string>
    <string name="title_map">Map View</string>
    <string name="title_list">List View</string>
    <string name="title_activity_menu_list">MenuList</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_menu_lists">MenuLists</string>
    <string name="title_activity_login_watcard">Watcard login</string>
    <string name="ShowAll">Show All</string>
    <string name="Clear">Clear Map</string>
    <string name="error">Network connection required. Click the settings button to go to your phone settings. When you are connected, hit the refresh button.</string>
    <string name="ready">Refresh!</string>
    <string name="Username">Student ID</string>
    <string name="Password">WatCard PIN</string>
    <string name="login">Login</string>
    <string name="settingsPhone">Phone Settings</string>

    <!-- Menu List strings. -->
    <string name="menu_settings">Settings</string>
    <string name="cd">Content Description</string>

    <!-- Menu List Network strings. -->
    <string name="updated">Last updated:</string>
    <string name="lost_connection">No Connection.</string>
    <string name="wifi_connected">Wi-Fi Connected.</string>
    <string name="data_connected">Mobile Data Connected.</string>
    <string name="connection_error">Unable to load content. Check your network connection.</string>
    <string name="xml_error">Error parsing XML.</string>

    <!-- Settings menu items -->
    <string name="settings">Settings</string>
    <string name="settingstest">Example Settings</string>
    <string name="refresh">Refresh</string>

    <!-- Preferences items -->
    <string name="inline_preferences">Inline Preferences</string>
    <string name="title_checkbox_preference">Checkbox Preference</string>
    <string name="summary_checkbox_preference">Summary Checkbox Preference</string>
    <string name="dialog_based_preferences">Inline Preferences</string>
    <string name="title_edittext_preference">Edit Text Preference</string>
    <string name="summary_edittext_preference">Summary Edit Text Preference</string>
    <string name="dialog_title_edittext_preference">Dialog Edit Text Preference</string>
    <string name="title_list_preference">Title List Preference</string>
    <string name="summary_list_preference">Summary List Preference</string>
    <string name="entries_list_preference">Entries List Preference</string>
    <string name="entryvalues_list_preference">Entry Values List Preference</string>
    <string name="dialog_title_list_preference">Dialog Title List Preference</string>
    <string name="launch_preferences">Launch Preferences</string>
    <string name="title_screen_preference">Title Screen Preference</string>
    <string name="summary_screen_preference">Summary Screen Preference</string>
    <string name="title_next_screen_toggle_preference">Title Next Screen Preference</string>
    <string name="summary_next_screen_toggle_preference">Summary Next Screen Preference</string>
    <string name="title_intent_preference">Title Intent Preference</string>
    <string name="summary_intent_preference">Summary Intent Preference</string>
    <string name="preference_attributes">Preference Attributes</string>
    <string name="title_parent_preference">Title Parent Preference</string>
    <string name="summary_parent_preference">Summary Parent Preference</string>
    <string name="title_child_preference">Title Child Preference</string>
    <string name="summary_child_preference">Summary Child Preference</string>
    <string name="title_activity_settings">Settings</string>
    <string name="network_preferences">Network</string>
    <string name="title_connection_type_preference">Connection Type</string>
    <string name="summary_connection_type_preference">Network connection used to download data.</string>
    <string name="dialog_title_connection_type_preference">Connection Type</string>
    <string name="title_store_data_preference">Store Data</string>
    <string name="summary_store_data_preference">Stores data for use offline.</string>
    <string name="title_fetch_weekly_preference">Fetch Automatically</string>
    <string name="summary_fetch_weekly_preference">Weekly fetches new data.</string>
    <string name="title_activity_splash_screen">UW Food Menu</string>
    <string name="title_activity_connection_cache">ConnectionCache</string>
    <string name="title_activity_main_screen">MainScreen2</string>
    <string name="title_activity_error_page">ErrorPage</string>
    <string name="title_activity_nutrition_info">NutritionInfo</string>
    <string name="title_activity_main_screen2">MainScreen2</string>
    <string name="title_activity_about_page">About Us</string>
    <string name="slidingmenu_by_jeremy_feinstein">SlidingMenu - by Jeremy Feinstein</string>
    <string name="google_play_services_google_inc_">Google Play Services - Google Inc.</string>
    <string name="used_under_the_apache_license">Used under the Apache License</string>
    <string name="used_under_the_creative_commons_license">Used under the Creative Commons License</string>
    <string name="created_by_">"Created by "</string>
    <string name="uw_food_menu">UW Food Menu</string>
    <string name="this_is_an_open_source_application_available_on_github_">This is an open source application available on GitHub.</string>
    <string name="licenses">LICENSES</string>
    <string name="click_here_to_view_legal_notice">Click here to view Legal Notice</string>
    <string name="contains_information_provided_by_the_university_of_waterloo_under_license_on_an_as_is_basis_">Contains information provided by the University of Waterloo under license on an \'as is\' basis.</string>

    <string name="title_activity_watcard_vendors">WatcardVendors</string>
        
    <string-array name="spinner_array">
    <item>All</item>
	<item>On-Campus Food Services</item>
	<item>Off-Campus Flex Locations</item>	
	</string-array>

    <string name="title_activity_product_info">ProductInfo</string>
    <string name="title_activity_tabbed_dialog">TabbedDialogActivity</string>
    <string name="title_activity_balance_watcard">BalanceWatcard</string>
    <string name="title_activity_data_watcard">DataWatcard</string>

</resources>
