<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ConnectionCache" >

    <TextView
        android:id="@+id/errortext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="119dp"
        android:text="@string/error"
        android:textSize="20sp" />

    <Button
        android:id="@+id/ready"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/errortext"
        android:layout_below="@+id/errortext"
        android:layout_marginTop="28dp"
        android:text="@string/ready" />

    <Button
        android:id="@+id/settingsPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/ready"
        android:layout_alignBottom="@+id/ready"
        android:layout_alignRight="@+id/errortext"
        android:layout_marginRight="20dp"
        android:text="@string/settingsPhone" />

</RelativeLayout>
