<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginWatcard" >

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="#101010"
        android:gravity="center"
        android:minHeight="100dp"
        android:minWidth="500dp"
        android:padding="50dp"
        android:text="@string/defaultdata"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFFFFF" />

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/login"
        android:layout_below="@+id/login"
        android:layout_marginTop="34dp"
        android:background="#F8F8F8"
        android:textColor="#000000"
        android:ems="10"
        android:hint="@string/Username"
        android:inputType="textPersonName|number"
        android:minHeight="50dp"
        android:minWidth="500dp"
        android:padding="15dp" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/username"
        android:layout_below="@+id/username"
        android:layout_marginTop="16dp"
        android:background="#F8F8F8"
        android:ems="10"
        android:hint="@string/Password"
        android:minHeight="50dp"
        android:inputType="textPassword|number"
        android:password="true"
        android:minWidth="500dp"
        android:padding="15dp"
        android:textColor="#000000" />

    <Button
        android:id="@+id/go"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/password"
        android:layout_below="@+id/password"
        android:layout_marginTop="56dp"
        android:background="#680000"
        android:minHeight="50dp"
        android:minWidth="500dp"
        android:text="@string/login"
        android:textColor="#FFFFFF" />

</RelativeLayout>
