<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".AboutPage" >
    
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

	<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_marginTop="25sp" >
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/TextViewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/uw_food_menu"
            android:textSize="30sp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/lvHeaderTextColor"
            android:layout_marginTop="5sp" />

        <View
            android:id="@+id/View02"
            android:layout_width="match_parent"
            android:layout_height="@dimen/lvDividerHeight"
            android:background="@color/lvHeaderDividerColor" />

        <TextView
            android:id="@+id/TextViewVersion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="3dp"
            android:text=""
            android:textColor="@color/lvHeaderTextColor"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/TextViewCreatedBy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="15dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/created_by_"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/TextViewGithub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="25dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/this_is_an_open_source_application_available_on_github_"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/TextViewOpenData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="25dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingBottom="10dp"
            android:text="@string/contains_information_provided_by_the_university_of_waterloo_under_license_on_an_as_is_basis_"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textViewLicenses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingBottom="5dp"
            android:paddingTop="20dp"
            android:text="@string/licenses"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/lvHeaderTextColor" />

        <View
            android:id="@+id/View01"
            android:layout_width="match_parent"
            android:layout_height="@dimen/lvDividerHeight"
            android:background="@color/lvHeaderDividerColor" />

        <TextView
            android:id="@+id/TextViewSlidingMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:text="@string/slidingmenu_by_jeremy_feinstein"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/TextViewSlidingMenuLicense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="3dp"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:text="@string/used_under_the_apache_license"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="15sp" />

        <View
            android:id="@+id/item_separator"
            android:layout_width="match_parent"
            android:layout_height="@dimen/lvDividerHeight"
            android:background="@color/lvDividerColor" />

        <TextView
            android:id="@+id/TextViewGooglePlay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:text="@string/google_play_services_google_inc_"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textViewGooglePlayLicense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:text="@string/used_under_the_apache_license"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/TextViewGooglePlayLegalNotice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="3dp"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:text="@string/click_here_to_view_legal_notice"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="15sp" />

    </LinearLayout>
    </RelativeLayout>
	</ScrollView>
</FrameLayout>
